--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <meta charset="utf-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Книга «Дао дэ цзин» в переводе Яна Хин-шуна">
   <title>Дао дэ цзин</title>
   <link rel="stylesheet" href="assets/style.css">
